--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,11 @@
 .main-heading{
     text-align: center;
-
+    padding-bottom: 20px;
+}
+.main-heading-text{
+    color: rgb(106, 57, 215);
+    font-weight: 400;
+    font-size: 32px;
 }
 .user-avatar{
     width: 200px;
@@ -8,7 +13,7 @@
 
 }
 .start{
-    margin: 3rem 17rem 3rem 17rem;
+    margin: 1rem 20rem 3rem 20rem;
 }
 
 .option{
@@ -17,10 +22,6 @@
 .optionSelection{
     width: 70%;
 }
-.main-heading-text{
-    color: rgb(106, 57, 215);
-}
-
 spacer{
     display: flex;
     flex-grow: 1; 
