--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="d-flex flex-row main-heading justify-content-between  align-items-center">
     <h1 class="main-heading-text">avataaars generator</h1>
     <div>
-      <button mat-flat-button color="primary" class="main-heading-button">
+      <button mat-flat-button color="primary" class="main-heading-button" (click)="getRandom()">
         <i class="fa fa-random"></i>&nbsp; Random
       </button>
     </div>
