--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,16 +15,17 @@
     <div class="d-flex flex-row">
       <span class="option">Avatar Style  &nbsp; </span>
       <mat-radio-group formControlName="avatarStyle">
-        <mat-radio-button> circle &nbsp;</mat-radio-button>
-        <mat-radio-button> Transparent</mat-radio-button>
+        <ng-container *ngFor="let option of avatarStyle">
+          <mat-radio-button [value]="+option.key">{{option.value}}</mat-radio-button>
+        </ng-container>
       </mat-radio-group>
     </div>
     <div class="d-flex flex-row justify-content-between  align-items-center">
       <div class="option">Top</div>
       <mat-form-field class="optionSelection">
         <mat-select formControlName="top">
-          <ng-container *ngFor="let option of topArray">
-            <mat-option [value]="option.key">{{option.value}}</mat-option>
+          <ng-container *ngFor="let option of tops">
+            <mat-option [value]="+option.key">{{option.value}}</mat-option>
           </ng-container>
         </mat-select>
       </mat-form-field>
@@ -33,12 +34,9 @@
       <div class="option">FacialHair</div>
       <mat-form-field class="optionSelection">
         <mat-select formControlName="facialHair">
-          <mat-option>Blank</mat-option>
-          <mat-option>BeardMedium</mat-option>
-          <mat-option>BeardLight</mat-option>
-          <mat-option>BeardMagestic</mat-option>
-          <mat-option>MoustacheFancy</mat-option>
-          <mat-option>MoustacheMagnum</mat-option>
+          <ng-container *ngFor="let option of facialHair">
+            <mat-option [value]="+option.key">{{option.value}}</mat-option>
+          </ng-container>
         </mat-select>
       </mat-form-field>
     </div>
@@ -47,15 +45,9 @@
       <div class="option">Clothes</div>
       <mat-form-field class=" optionSelection">
         <mat-select formControlName="clothes">
-          <mat-option>BlazerShirt</mat-option>
-          <mat-option>BlazerSweater</mat-option>
-          <mat-option>CollarSweater</mat-option>
-          <mat-option>GraphicShirt</mat-option>
-          <mat-option>Hoodie</mat-option>
-          <mat-option>Overall</mat-option>
-          <mat-option>ShirtCrewNeck</mat-option>
-          <mat-option>ShirtScoopNeck</mat-option>
-          <mat-option>ShirtVNeck</mat-option>
+          <ng-container *ngFor="let option of clothe">
+            <mat-option [value]="+option.key">{{option.value}}</mat-option>
+          </ng-container>
         </mat-select>
       </mat-form-field>
     </div>
@@ -64,18 +56,9 @@
       <div class="option">Eyes</div>
       <mat-form-field class="optionSelection">
         <mat-select formControlName="eyes">
-          <mat-option>Close</mat-option>
-          <mat-option>Cry</mat-option>
-          <mat-option>Default</mat-option>
-          <mat-option>Dizzy</mat-option>
-          <mat-option>EyeRoll</mat-option>
-          <mat-option>Happy</mat-option>
-          <mat-option>Hearts</mat-option>
-          <mat-option>Side</mat-option>
-          <mat-option>Squint</mat-option>
-          <mat-option>Surprised</mat-option>
-          <mat-option>Wink</mat-option>
-          <mat-option>WinkWanky</mat-option>
+          <ng-container *ngFor="let option of eyes">
+            <mat-option [value]="+option.key">{{option.value}}</mat-option>
+          </ng-container>
         </mat-select>
       </mat-form-field>
     </div>
@@ -84,18 +67,79 @@
       <div class="option">Eyebrows</div>
       <mat-form-field class="optionSelection">
         <mat-select formControlName="eyebrow">
-          <mat-option>Angry</mat-option>
-          <mat-option>AngryNatural</mat-option>
-          <mat-option>Default</mat-option>
-          <mat-option>DefaultNatural</mat-option>
-          <mat-option>FlatNatural</mat-option>
-          <mat-option>RaisedExcited</mat-option>
-          <mat-option>RaisedExcitedNatural</mat-option>
-          <mat-option>SadCornered</mat-option>
-          <mat-option>SadCorneredNatural</mat-option>
-          <mat-option>UniBrowNatural</mat-option>
-          <mat-option>UpDown</mat-option>
-          <mat-option>UpDownNatural</mat-option>
+          <ng-container *ngFor="let option of eyebrow">
+            <mat-option [value]="+option.key">{{option.value}}</mat-option>
+          </ng-container>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="d-flex flex-row justify-content-between  align-items-center">
+      <div class="option">Accessories</div>
+      <mat-form-field class="optionSelection">
+        <mat-select formControlName="accessories">
+          <ng-container *ngFor="let option of accessoriesArray">
+            <mat-option [value]="+option.key">{{option.value}}</mat-option>
+          </ng-container>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="d-flex flex-row justify-content-between  align-items-center">
+      <div class="option">Facial-Hair Color</div>
+      <mat-form-field class="optionSelection">
+        <mat-select formControlName="facialHairColor">
+          <ng-container *ngFor="let option of facialHairColor">
+            <mat-option [value]="+option.key">{{option.value}}</mat-option>
+          </ng-container>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="d-flex flex-row justify-content-between  align-items-center">
+      <div class="option">Graphic</div>
+      <mat-form-field class="optionSelection">
+        <mat-select formControlName="graphic">
+          <ng-container *ngFor="let option of graphic">
+            <mat-option [value]="+option.key">{{option.value}}</mat-option>
+          </ng-container>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="d-flex flex-row justify-content-between  align-items-center">
+      <div class="option">Hair-Color</div>
+      <mat-form-field class="optionSelection">
+        <mat-select formControlName="hairColor">
+          <ng-container *ngFor="let option of hairColor">
+            <mat-option [value]="+option.key">{{option.value}}</mat-option>
+          </ng-container>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="d-flex flex-row justify-content-between  align-items-center">
+      <div class="option">Hat-Color</div>
+      <mat-form-field class="optionSelection">
+        <mat-select formControlName="hatColor">
+          <ng-container *ngFor="let option of hatColor">
+            <mat-option [value]="+option.key">{{option.value}}</mat-option>
+          </ng-container>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="d-flex flex-row justify-content-between  align-items-center">
+      <div class="option">Face</div>
+      <mat-form-field class="optionSelection">
+        <mat-select formControlName="face">
+          <ng-container *ngFor="let option of face">
+            <mat-option [value]="+option.key">{{option.value}}</mat-option>
+          </ng-container>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="d-flex flex-row justify-content-between  align-items-center">
+      <div class="option">Clothe-Color</div>
+      <mat-form-field class="optionSelection">
+        <mat-select formControlName="colorFabric">
+          <ng-container *ngFor="let option of clothColor">
+            <mat-option [value]="+option.key">{{option.value}}</mat-option>
+          </ng-container>
         </mat-select>
       </mat-form-field>
     </div>
@@ -104,17 +148,9 @@
       <div class="option">Mouth</div>
       <mat-form-field class="optionSelection">
         <mat-select formControlName="mouth">
-          <mat-option>Concerned</mat-option>
-          <mat-option>Default</mat-option>
-          <mat-option>Eating</mat-option>
-          <mat-option>Grimace</mat-option>
-          <mat-option>Sad</mat-option>
-          <mat-option>ScreamOpen</mat-option>
-          <mat-option>Serious</mat-option>
-          <mat-option>Smile</mat-option>
-          <mat-option>Tounge</mat-option>
-          <mat-option>Twinkle</mat-option>
-          <mat-option>Vomit</mat-option>
+          <ng-container *ngFor="let option of mouth">
+            <mat-option [value]="+option.key">{{option.value}}</mat-option>
+          </ng-container>
         </mat-select>
       </mat-form-field>
     </div>
@@ -123,13 +159,9 @@
       <div class="option"><i class="fas fa-palette"></i>Skin</div>
       <mat-form-field class="optionSelection">
         <mat-select formControlName="skin">
-          <mat-option>Tanned</mat-option>
-          <mat-option>Yellow</mat-option>
-          <mat-option>Pale</mat-option>
-          <mat-option>Light</mat-option>
-          <mat-option>Brown</mat-option>
-          <mat-option>DarkBrown</mat-option>
-          <mat-option>Black</mat-option>
+          <ng-container *ngFor="let option of skin">
+            <mat-option [value]="+option.key">{{option.value}}</mat-option>
+          </ng-container>
         </mat-select>
       </mat-form-field>
     </div>
