fixed png download

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -183,5 +183,5 @@
 
 
 </div>
-<canvas style="height: 500px ;width: 500px; display: none" itemref="canvasRef" id="canvasRef">
+<canvas style="height: 140 ;width: 132; display: none" itemref="canvasRef" id="canvasRef">
 </canvas>
