--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,11 +11,11 @@
   <div class="d-flex justify-content-center align-item-center p-2">
     <app-avtaar [options]="options"></app-avtaar>
   </div>
-  <form [formGroup]="avatarForm"   class="d-flex flex-column align-item-between">
+  <form [formGroup]="avatarForm" class="d-flex flex-column align-item-between">
     <div class="d-flex flex-row">
       <span class="option">Avatar Style  &nbsp; </span>
       <mat-radio-group formControlName="avatarStyle">
-        <ng-container  *ngFor="let option of avatarStyle">
+        <ng-container *ngFor="let option of avatarStyle">
           <mat-radio-button class="pl-3" color="primary" [value]="option">{{option}}</mat-radio-button>
         </ng-container>
       </mat-radio-group>
@@ -30,7 +30,7 @@
         </mat-select>
       </mat-form-field>
     </div>
-    <div class="d-flex flex-row justify-content-between  align-items-center">
+    <div class="d-flex flex-row justify-content-between  align-items-center" *ngIf=" options.top !== (topsEnum.HIJAB)">
       <div class="option">Hair-Color</div>
       <mat-form-field class="optionSelection">
         <mat-select formControlName="hairColor">
@@ -40,7 +40,7 @@
         </mat-select>
       </mat-form-field>
     </div>
-    <div class="d-flex flex-row justify-content-between  align-items-center"  >
+    <div class="d-flex flex-row justify-content-between  align-items-center">
       <div class="option">Hat-Color</div>
       <mat-form-field class="optionSelection">
         <mat-select formControlName="hatColor">
@@ -50,7 +50,7 @@
         </mat-select>
       </mat-form-field>
     </div>
-    <div class="d-flex flex-row justify-content-between  align-items-center">
+    <div class="d-flex flex-row justify-content-between  align-items-center" *ngIf=" options.top !== (topsEnum.HIJAB)">
       <div class="option">FacialHair</div>
       <mat-form-field class="optionSelection">
         <mat-select formControlName="facialHair">
@@ -103,7 +103,7 @@
         </mat-select>
       </mat-form-field>
     </div>
-    <div class="d-flex flex-row justify-content-between  align-items-center">
+    <div class="d-flex flex-row justify-content-between  align-items-center" *ngIf=" options.top !== (topsEnum.HIJAB)">
       <div class="option">Facial-Hair Color</div>
       <mat-form-field class="optionSelection">
         <mat-select formControlName="facialHairColor">
@@ -113,7 +113,7 @@
         </mat-select>
       </mat-form-field>
     </div>
-    <div class="d-flex flex-row justify-content-between  align-items-center">
+    <div class="d-flex flex-row justify-content-between  align-items-center" *ngIf=" options.top !== (topsEnum.HIJAB)">
       <div class="option">Graphic</div>
       <mat-form-field class="optionSelection">
         <mat-select formControlName="graphic">
@@ -123,17 +123,17 @@
         </mat-select>
       </mat-form-field>
     </div>
-    <div class="d-flex flex-row justify-content-between  align-items-center">
-      <div class="option">Face</div>
-      <mat-form-field class="optionSelection">
-        <mat-select formControlName="face">
-          <ng-container *ngFor="let option of face">
-            <mat-option [value]="option">{{option}}</mat-option>
-          </ng-container>
-        </mat-select>
-      </mat-form-field>
-    </div>
-    <div class="d-flex flex-row justify-content-between  align-items-center">
+    <!--<div class="d-flex flex-row justify-content-between  align-items-center">-->
+    <!--<div class="option">Face</div>-->
+    <!--<mat-form-field class="optionSelection">-->
+    <!--<mat-select formControlName="face">-->
+    <!--<ng-container *ngFor="let option of face">-->
+    <!--<mat-option [value]="option">{{option}}</mat-option>-->
+    <!--</ng-container>-->
+    <!--</mat-select>-->
+    <!--</mat-form-field>-->
+    <!--</div>-->
+    <div class="d-flex flex-row justify-content-between  align-items-center" *ngIf=" options.top !== (topsEnum.HIJAB)">
       <div class="option">Clothe-Color</div>
       <mat-form-field class="optionSelection">
         <mat-select formControlName="colorFabric">
@@ -168,19 +168,33 @@
     <div class="d-flex flex-row justify-content-between  align-items-center" style="width: fit-content;">
       <div class="d-flex flex-column"></div>
       <div class="d-flex flex-row">
-        <button mat-flat-button color="primary" class="png_icon m-1"  (click)="onDownloadPNG()"><i class="fa fa-download"></i>  &nbsp; PNG</button>
-        <button mat-flat-button color="primary" class="svg_icon m-1 " (click)="downloadSvg()"><i class="fa fa-download"></i> &nbsp; SVG</button>
-        <button mat-flat-button color="primary" class="showangular_icon m-1 " (click)="toggleAngular()" *ngIf="!showAngular"><i class="fa fa-code"></i> &nbsp; Show Angular</button>
-        <button mat-flat-button color="primary" class="showangular_icon m-1 " (click)="toggleAngular()" *ngIf="showAngular"><i class="fa fa-code"></i> &nbsp; Hide Angular</button>
-        <button mat-flat-button color="primary" class="showimage_icon m-1" (click)="toggleImage()" *ngIf="!showImage"><i class="fa fa-code"></i> &nbsp; Show image</button>
-        <button mat-flat-button color="primary" class="showimage_icon m-1" (click)="toggleImage()" *ngIf="showImage"><i class="fa fa-code"></i> &nbsp; Hide image</button>
+        <button mat-flat-button color="primary" class="png_icon m-1" (click)="onDownloadPNG()"><i
+          class="fa fa-download"></i> &nbsp; PNG
+        </button>
+        <button mat-flat-button color="primary" class="svg_icon m-1 " (click)="downloadSvg()"><i
+          class="fa fa-download"></i> &nbsp; SVG
+        </button>
+        <button mat-flat-button color="primary" class="showangular_icon m-1 " (click)="toggleAngular()"
+                *ngIf="!showAngular"><i class="fa fa-code"></i> &nbsp; Show Angular
+        </button>
+        <button mat-flat-button color="primary" class="showangular_icon m-1 " (click)="toggleAngular()"
+                *ngIf="showAngular"><i class="fa fa-code"></i> &nbsp; Hide Angular
+        </button>
+        <button mat-flat-button color="primary" class="showimage_icon m-1" (click)="toggleImage()" *ngIf="!showImage"><i
+          class="fa fa-code"></i> &nbsp; Show image
+        </button>
+        <button mat-flat-button color="primary" class="showimage_icon m-1" (click)="toggleImage()" *ngIf="showImage"><i
+          class="fa fa-code"></i> &nbsp; Hide image
+        </button>
         <br>
       </div>
-      <button mat-flat-button color="primary" class="tweet_icon"><i class="fa fa-twitter"></i>&nbsp;  Tweet</button>
+      <button mat-flat-button color="primary" class="tweet_icon"><i class="fa fa-twitter"></i>&nbsp; Tweet</button>
     </div>
 
   </form>
-
+  <textarea style="width: 100%; height: 150px" *ngIf="showAngular">
+<Angular >{{angularCode}}</Angular>
+</textarea>
 
 </div>
 <canvas style="height: 140 ;width: 132; display: none" itemref="canvasRef" id="canvasRef">
