textbox for svg and angular added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -168,33 +168,47 @@
     <div class="d-flex flex-row justify-content-between  align-items-center" style="width: fit-content;">
       <div class="d-flex flex-column"></div>
       <div class="d-flex flex-row">
-        <button mat-flat-button color="primary" class="png_icon m-1" (click)="onDownloadPNG()"><i
+        <button mat-flat-button color="primary" class="m-1" (click)="onDownloadPNG()"><i
           class="fa fa-download"></i> &nbsp; PNG
         </button>
-        <button mat-flat-button color="primary" class="svg_icon m-1 " (click)="downloadSvg()"><i
+        <button mat-flat-button color="primary" class="m-1 " (click)="downloadSvg()"><i
           class="fa fa-download"></i> &nbsp; SVG
         </button>
-        <button mat-flat-button color="primary" class="showangular_icon m-1 " (click)="toggleAngular()"
+        <button mat-flat-button color="primary" class="m-1 " (click)="toggleAngular(true)"
                 *ngIf="!showAngular"><i class="fa fa-code"></i> &nbsp; Show Angular
         </button>
-        <button mat-flat-button color="primary" class="showangular_icon m-1 " (click)="toggleAngular()"
+        <button mat-flat-button color="primary" class="m-1 " (click)="toggleAngular(true)"
                 *ngIf="showAngular"><i class="fa fa-code"></i> &nbsp; Hide Angular
         </button>
-        <button mat-flat-button color="primary" class="showimage_icon m-1" (click)="toggleImage()" *ngIf="!showImage"><i
+        <button mat-flat-button color="primary" class="m-1" (click)="toggleImage()" *ngIf="false"><i
           class="fa fa-code"></i> &nbsp; Show image
         </button>
-        <button mat-flat-button color="primary" class="showimage_icon m-1" (click)="toggleImage()" *ngIf="showImage"><i
+        <button mat-flat-button color="primary" class="m-1" (click)="toggleImage()" *ngIf="false"><i
           class="fa fa-code"></i> &nbsp; Hide image
+        </button>
+        <button mat-flat-button color="primary" class="m-1" (click)="toggleSvg(true)" *ngIf="!showSvg"><i
+          class="fa fa-code"></i> &nbsp; Show Svg
+        </button>
+        <button mat-flat-button color="primary" class="m-1" (click)="toggleSvg(true)" *ngIf="showSvg"><i
+          class="fa fa-code"></i> &nbsp; Hide Svg
         </button>
         <br>
       </div>
-      <button mat-flat-button color="primary" class="tweet_icon"><i class="fa fa-twitter"></i>&nbsp; Tweet</button>
+      <button mat-flat-button color="primary"><i class="fa fa-twitter"></i>&nbsp; Tweet</button>
     </div>
 
   </form>
-  <textarea style="width: 100%; height: 150px" *ngIf="showAngular">
-<Angular >{{angularCode}}</Angular>
-</textarea>
+  <div *ngIf="showAngular">
+    <textarea style="width: 100%; height: 150px" type="text" #angularText >{{angularCode}}</textarea>
+      <button mat-stroked-button (click)="copyText(angularText)"><i class="fa fa-copy"></i></button>
+  </div>
+  <div  *ngIf="showSvg">
+    <textarea style="width: 100%; height: 150px" type="text" #svgText>
+    {{svgData}}
+    </textarea>
+    <button mat-stroked-button (click)="copyText(svgText)"><i class="fa fa-copy"></i></button>
+  </div>
+
 
 </div>
 <canvas style="height: 140 ;width: 132; display: none" itemref="canvasRef" id="canvasRef">
