--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="pl-5 pr-5 start">
   <div class="d-flex flex-row main-heading justify-content-between  align-items-center">
-    <h1 class="main-heading-text">Generate Avatar at DevsLane</h1>
+    <h1 class="main-heading-text">Generate Avataar at DevsLane</h1>
     <div>
       <button mat-flat-button color="primary" class="bottomButton" (click)="getRandom()">
         <i class="fa fa-random"></i>&nbsp; Random
